*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.16 ===
* Implemented lltl::ptrset collection for unordered pointer storage.
* Implemented raw_parray::qpremove method.
* Implemented raw_darray::qremove and raw_darray::qpremove methods.
* Updated build scripts.

=== 1.0.15 ===
* Updated module versions in dependencies.

=== 1.0.14 ===
* Fixed several issues reported by PVS Studio static analyzer.
* Updated module versions in dependencies.

=== 1.0.13 ===
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.12 ===
* Implemented the lltl::iterator class free of dynamic allocations.
* Implemented iterators for lltl::parray, lltl::darray, lltl::phashset, lltl::pphash.
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.11 ===
* Added possibility to implicitly specify data interfaces in constructors
  for lltl::pphash and lltl::phashset.
* Removed Makefile.d. Dependencies are now automatically generated at the build stage.
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.10 ===
* Updated module versions in dependencies.

=== 1.0.9 ===
* Added test build for Windows using MSYS2.
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.8 ===
* Updated default data copy specification for the generic data type.
* Added Clang build for the CI.

=== 1.0.7 ===
* Updated build scripts.

=== 1.0.6 ===
* Updated build scripts.

=== 1.0.5 ===
* Several fixes in unit tests.
* Updated build scripts.

=== 1.0.4 ===
* Updated improper implementation of several const-methods for the lltl::parray
  collection.
* Added pphash::key method to obtain constant pointer for the allocated key.
* Updated build scripts.

=== 1.0.3 ===
* Added support of C++ 11 standard.
* Fixed compilation for Windows.
* Updated dependencies.
* Updated build scripts.

=== 1.0.2 ===